[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/Settings/Settings.gd" type="Script" id=1]

[node name="Settings" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.4

[node name="NewGameButton" type="Button" parent="Panel"]
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.4
text = "New Game"

[node name="CloseButton" type="Button" parent="Panel"]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.9
text = "Close"

[node name="NewGameConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 400.0
margin_bottom = 140.0
rect_min_size = Vector2( 400, 140 )
window_title = "Start a new game?"
dialog_text = "Do you want to start a new game?"

[connection signal="pressed" from="Panel/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="confirmed" from="NewGameConfirmationDialog" to="." method="_on_NewGameConfirmationDialog_confirmed"]
